--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,7 +11,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.2",
+    "ejs": "^3.1.10",
     "emailjs-com": "^3.2.0",
+    "nodemailer": "^6.9.16",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
